unpackaged/main/default/objects/FundingAward/fields/Account_Owned_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Account_Owned_By_Me__c</fullName>
    <description>Used for dynamic reporting (i.e. can be in reports shared with multiple users that would show each user only the Funding Award records they own)</description>
    <formula>Awardee.OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for dynamic reporting (i.e. can be in reports shared with multiple users that would show each user only the Funding Award records they own)</inlineHelpText>
    <label>Account Owned By Me</label>
    <type>Checkbox</type>
</CustomField>