unpackaged/main/default/objects/FundingAward/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <description>Rolled-up by DLRS from child Amendment. Used in Amendment Agreement Conga templets.</description>
    <inlineHelpText>Rolled-up by DLRS from child Amendment. Used in Amendment Agreement Conga templets.</inlineHelpText>
    <label>Amendment Reason</label>
    <type>TextArea</type>
</CustomField>