unpackaged/main/default/objects/FundingAward/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Information</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Bank Account needs to be associated with the Awardee or Fiscal Sponsor</errorMessage>
        <filterItems>
            <field>Bank_Information__c.Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.AwardeeId</valueField>
        </filterItems>
        <filterItems>
            <field>Bank_Information__c.Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.Fiscal_Sponsor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Information__c</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>