unpackaged/main/default/objects/FundingAward/fields/Canceled_or_Void_Payments__c.field-meta.xml
<CustomField>
    <fullName>Canceled_or_Void_Payments__c</fullName>
    <inlineHelpText>Total Amount of canceled or voided payments related to this grant/request</inlineHelpText>
    <label>Canceled or Void Payments</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>equals</operation>
        <value>Canceled, Void</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>