unpackaged/main/default/objects/FundingAward/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in formula for Docket name field in contributing funds</description>
    <label>Docket</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>