unpackaged/main/default/objects/FundingAward/fields/Fiscal_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Awards (Fiscal Sponsor)</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>