unpackaged/main/default/objects/FundingAward/fields/Number_of_Active_Amendments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Amendments__c</fullName>
    <description>Rollup count of Funding Award Amendments</description>
    <label>Number of Active Amendments</label>
    <summaryForeignKey>FundingAwardAmendment.FundingAwardId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>