unpackaged/main/default/objects/FundingAward/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <description>For Request/Grant that was amended where the &#39;End Date&#39; was changed. Set automatically (by Process Builder) when the record type is changed to &quot;Awarded Grant&quot;</description>
    <inlineHelpText>For Request/Grant that was amended where the &#39;End Date&#39; was changed. Set automatically (by Process Builder) when the record type is changed to &quot;Awarded Grant&quot;</inlineHelpText>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>