unpackaged/main/default/objects/FundingAward/fields/Original_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Grant_Amount__c</fullName>
    <description>Capture to original Grant Amount for amended grants.</description>
    <inlineHelpText>Capture to original Grant Amount for amended grants.</inlineHelpText>
    <label>Original Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>