unpackaged/main/default/objects/FundingAward/fields/Payments_Balance_AJWS__c.field-meta.xml
<CustomField>
    <fullName>Payments_Balance_AJWS__c</fullName>
    <description>For grants/requests shows the grant/request amount minus the payments paid.</description>
    <formula>Amount -  Payments_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For grants/requests shows the grant/request amount minus the payments paid.</inlineHelpText>
    <label>Payments Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>