unpackaged/main/default/objects/FundingAward/fields/Payments_Paid__c.field-meta.xml
<CustomField>
    <fullName>Payments_Paid__c</fullName>
    <description>For grants/requests. Shows Payments Paid or Completed.</description>
    <inlineHelpText>For grants/requests. Shows Payments Paid or Completed.</inlineHelpText>
    <label>Payments Paid</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryFilterItems>
        <field>FundingDisbursement.Status</field>
        <operation>equals</operation>
        <value>Paid, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>