unpackaged/main/default/objects/FundingAward/fields/Pledge_Term__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Term__c</fullName>
    <label>Pledge Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-year</fullName>
            </value>
            <value>
                <fullName>2-year</fullName>
            </value>
            <value>
                <fullName>3-year</fullName>
            </value>
            <value>
                <fullName>4-year</fullName>
            </value>
            <value>
                <fullName>5-year</fullName>
            </value>
            <value>
                <fullName>6-year</fullName>
            </value>
            <value>
                <fullName>7-year</fullName>
            </value>
            <value>
                <fullName>8-year</fullName>
            </value>
            <value>
                <fullName>9-year</fullName>
            </value>
            <value>
                <fullName>10-year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>