unpackaged/main/default/objects/FundingAward/fields/Primary_Staff_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Staff_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program Officer (or other AJWS staff) responsible for this Request/Grant.</description>
    <inlineHelpText>The Program Officer (or other AJWS staff) responsible for this Request/Grant.</inlineHelpText>
    <label>Primary Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>