unpackaged/main/default/objects/FundingAward/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <formula>IndividualApplication.Project_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>