unpackaged/main/default/objects/FundingAward/fields/Request_Number_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Request_Number_Legacy__c</fullName>
    <inlineHelpText>Part of the back-end process to set AJWS grant ID on AJWS issued grants (populated by a flow)</inlineHelpText>
    <label>Request Number Legacy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>