unpackaged/main/default/objects/FundingAward/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <formula>IndividualApplication.RequestedAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>