unpackaged/main/default/objects/FundingAward/fields/Secondary_Staff__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Typically, the In-Country Consultant</inlineHelpText>
    <label>Secondary Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Awards1</relationshipName>
    <type>Lookup</type>
</CustomField>