unpackaged/main/default/objects/FundingAward/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Date on which this transaction settled</description>
    <inlineHelpText>Date on which this transaction settled</inlineHelpText>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>