unpackaged/main/default/objects/FundingAward/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description>Grant term in months. Calculated using the grant start and end date fields.</description>
    <formula>round((EndDate - StartDate)/30, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grant term in months. Calculated using the grant start and end date fields.</inlineHelpText>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>