unpackaged/main/default/objects/FundingAward/fields/Year_One_Grant__c.field-meta.xml
<CustomField>
    <fullName>Year_One_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year One Grant</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Awards (Year One Grant)</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>