unpackaged/main/default/objects/FundingAward/fields/Year_Three_Grant__c.field-meta.xml
<CustomField>
    <fullName>Year_Three_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year Three Grant</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Awards (Year Three Grant)</relationshipLabel>
    <relationshipName>Funding_Awards1</relationshipName>
    <type>Lookup</type>
</CustomField>