unpackaged/main/default/objects/FundingAward/fields/Year_Two_Grant__c.field-meta.xml
<CustomField>
    <fullName>Year_Two_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year Two Grant</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Funding Awards (Year Two Grant)</relationshipLabel>
    <relationshipName>Funding_Awards2</relationshipName>
    <type>Lookup</type>
</CustomField>